--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,9 @@
       package="uk.co.bestbuy.widget"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name" 
+								 android:icon="@drawable/logo" 
+								 android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name=".BarCodeWidget"
                   android:label="@string/app_name">
             <intent-filter>
