--- a/local.properties
+++ b/local.properties
@@ -7,4 +7,4 @@
 # location of the SDK. This is only used by Ant
 # For customization when using a Version Control System, please read the
 # header note.
-sdk-location=D:\\software\\android-sdk-windows-1.6_r1
+sdk.dir=/software/android-sdk-linux_86
